package com.designpattern.behavioral.interpreter.expressions;

/**
 * @Auther: ZhengHuaJing
 * @Date: 2020/10/14 10:56
 * @Description:
 */
public interface Expression {
    boolean interpret(String content);
}
